--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "2.1.8"
   },
   "scripts": {
     "test": "mocha --require babel-core/register",
@@ -21,9 +21,15 @@
     "babel-core": "^6.26.3",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
-    "enzyme": "^3.3.0",
+    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "ignore-styles": "^5.0.1",
     "mocha": "^5.2.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
