--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "ignore-styles": "^5.0.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "prettier": "^2.1.1"
   },
   "browserslist": [
     ">0.2%",
